Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70662

Compositor: xdg-shell popups (all versions) are misplaced when devicePixelRatio != 1

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.13.0 Alpha 1
    • 5.11.2
    • QPA: Wayland
    • None
    • Linux/Wayland
    • aede513e7c592dd189754898a38d1aac432d55ed (qt/qtwayland/dev)

    Description

      The implementation assumes devicePixelRatio == 1.

      Affects xdg-shell v5, v6, stable.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes