Compositor: Add QWaylandQuickItem::mapFromSurface

[ChangeLog][Compositor] Added QWaylandQuickItem::mapFromSurface which converts
points in Wayland surface coordinates to points in QQuickItem coordinates.

i.e. the inverse of the existing QWaylandQuickItem::mapToSurface.

Task-number: QTBUG-70662
Change-Id: I11123c2c5394d7d9b7b8fdfcfd325592597a6b50
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>