src/compositor/compositor_api/qwaylandquickitem.cpp
@@ -1061,6 +1061,22 @@ QPointF QWaylandQuickItem::mapToSurface(const QPointF &point) const
 }
 
 /*!
+ * Maps the given \a point in the Wayland surfaces's coordinate system to the equivalent
+ * point within this item's coordinate system, and returns the mapped coordinate.
+ */
+QPointF QWaylandQuickItem::mapFromSurface(const QPointF &point) const
+{
+    Q_D(const QWaylandQuickItem);
+    if (!surface() || surface()->size().isEmpty())
+        return point * d->scaleFactor();
+
+    qreal xScale = width() / surface()->size().width() * surface()->bufferScale();
+    qreal yScale = height() / surface()->size().height() * surface()->bufferScale();
+
+    return QPointF(point.x() * xScale, point.y() * yScale);
+}
+
+/*!
  * \qmlproperty bool QtWaylandCompositor::WaylandQuickItem::sizeFollowsSurface
  *
  * This property specifies whether the size of the item should always match
