src/compositor/compositor_api/qwaylandquickitem.h
@@ -101,6 +101,7 @@ public:
 
     bool inputRegionContains(const QPointF &localPosition);
     Q_INVOKABLE QPointF mapToSurface(const QPointF &point) const;
+    Q_INVOKABLE QPointF mapFromSurface(const QPointF &point) const;
 
     bool sizeFollowsSurface() const;
     void setSizeFollowsSurface(bool sizeFollowsSurface);
